[package]
name = "alberto"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/meilisearch/alberto"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
heed = "0.20.0-alpha.9"
indicatif = "0.17.8"
rayon = "1.10.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
